# smib

./: .gitignore  README.md  SMIB_Master_Plan.docx  pyproject.toml  requirements.txt  setup.sh  start_notebook.command
docs/: genrou_physical_foundations.md  network_machine_interface.md
notebooks/: phase1_gencls.ipynb  phase2_0_genrou.ipynb  phase2_1_avr.ipynb  phase2_2_pss.ipynb
psse/: README.md
psse/phase1/: README.md  run_phase1_fault.py  smib_phase1.dyr
psse/phase2_0/: README.md  run_phase2_0_fault.py  smib_phase2_0.dyr
psse/phase2_1/: README.md  run_phase2_1_fault.py  smib_phase2_1.dyr
psse/phase2_2/: README.md  run_phase2_2_fault.py  smib_phase2_2.dyr
smib/: __init__.py  network.py  plotting.py  powerflow.py  scenarios.py  simulator.py  solver.py
smib/models/: __init__.py  base.py  gencls.py  genrou.py  pll.py  pss1a.py  st1a.py
tests/: test_flatline.py  test_gencls.py  test_genrou.py  test_pss1a.py  test_st1a.py
